# Payroll-ELT

./: README.md  data.csv  ddl_snowflake_ui.sql  extract.py  pyproject.toml  requirements.txt  script.sql
