[tool.poetry]
name = "payroll-elt"
version = "0.1.0"
description = ""
authors = ["Rojer Du <rojerdu.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "payroll_elt"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"
ruff = "^0.0.275"
isort = "^5.12.0"
mypy = "^1.4.1"
pandas = "^2.0.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
